--- a/index.html
+++ b/index.html
@@ -18,13 +18,16 @@
     }
     * { box-sizing: border-box; }
     body {
-      margin: 0;
-      font-family: ui-sans-serif, system-ui, -apple-system, "PingFang TC", "Noto Sans TC", "Microsoft JhengHei", Arial;
-      background: radial-gradient(1200px 600px at 20% 0%, rgba(255,255,255,.08), transparent 60%),
-                  radial-gradient(900px 500px at 90% 10%, rgba(255,255,255,.06), transparent 55%),
-                  var(--bg);
-      color: var(--text);
-    }
+  margin: 0;
+  font-family: ui-sans-serif, system-ui, -apple-system, "PingFang TC";
+  background: linear-gradient(
+    180deg,
+    #0b0d12 0%,
+    #141826 50%,
+    #0b0d12 100%
+  );
+  color: white;
+}
     .wrap { max-width: 980px; margin: 0 auto; padding: 18px 14px 56px; }
     .header {
       padding: 18px 16px;
