--- a/index.html
+++ b/index.html
@@ -1,42 +1,220 @@
 <!doctype html>
 <html lang="zh-Hant">
 <head>
-<meta charset="utf-8">
-<meta name="viewport" content="width=device-width, initial-scale=1">
-<title>台北慢活文青 4日3夜</title>
-<style>
-body { margin:0; font-family:system-ui,"PingFang TC"; background:#0b0d12; color:#fff; }
-.wrap { max-width:960px; margin:auto; padding:16px; }
-.header { background:rgba(255,255,255,.08); border-radius:16px; padding:16px; }
-h1 { margin:0 0 6px; }
-.tabs button { margin:6px 6px 0 0; }
-.day { margin-top:16px; background:rgba(255,255,255,.06); border-radius:16px; padding:16px; }
-.item { margin-top:10px; padding:12px; background:rgba(255,255,255,.06); border-radius:12px; }
-.btn { padding:8px 12px; border-radius:999px; background:rgba(255,255,255,.1); border:none; color:#fff; cursor:pointer; }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1" />
+  <title>台北慢活文青 4日3夜｜最終版</title>
+  <style>
+    :root { --bg:#0b0d12; --card:rgba(255,255,255,.06); --card2:rgba(255,255,255,.10);
+      --text:rgba(255,255,255,.92); --muted:rgba(255,255,255,.72); --muted2:rgba(255,255,255,.56);
+      --line:rgba(255,255,255,.12); --radius:16px; --shadow:0 10px 30px rgba(0,0,0,.35);}
+    *{box-sizing:border-box;}
+    body{margin:0;font-family:ui-sans-serif,system-ui,-apple-system,"PingFang TC","Noto Sans TC","Microsoft JhengHei",Arial;
+      background:radial-gradient(1200px 600px at 20% 0%, rgba(255,255,255,.08), transparent 60%),
+               radial-gradient(900px 500px at 90% 10%, rgba(255,255,255,.06), transparent 55%), var(--bg);
+      color:var(--text);}
+    .wrap{max-width:1020px;margin:0 auto;padding:18px 14px 70px;}
+    .header{padding:18px 16px;border:1px solid var(--line);
+      background:linear-gradient(180deg, rgba(255,255,255,.08), rgba(255,255,255,.04));
+      border-radius:var(--radius);box-shadow:var(--shadow);}
+    .toprow{display:flex;align-items:flex-start;justify-content:space-between;gap:12px;}
+    .kicker{font-size:12px;letter-spacing:.12em;text-transform:uppercase;color:var(--muted2);}
+    .title{margin:8px 0 6px;font-size:26px;line-height:1.2;}
+    .dates{color:var(--muted);font-size:14px;}
+    .grid{margin-top:12px;display:grid;grid-template-columns:1fr 1fr 1fr;gap:10px;}
+    .meta{padding:12px 12px;border:1px solid var(--line);background:var(--card);border-radius:14px;min-height:84px;white-space:pre-line;}
+    .meta h4{margin:0 0 6px;font-size:13px;color:var(--muted);font-weight:650;}
+    .meta .main{font-size:14px;line-height:1.35;}
+    .meta .sub{font-size:12px;color:var(--muted2);margin-top:6px;line-height:1.35;}
+    .tabs{margin-top:14px;display:flex;gap:8px;flex-wrap:wrap;align-items:center;}
+    .tab{border:1px solid var(--line);background:var(--card);color:var(--text);padding:10px 12px;border-radius:999px;
+      cursor:pointer;font-size:13px;transition:.15s ease;white-space:nowrap;}
+    .tab[aria-selected="true"]{background:var(--card2);border-color:rgba(255,255,255,.22);}
+    .btn{border:1px solid rgba(255,255,255,.16);background:rgba(255,255,255,.06);color:var(--text);
+      padding:10px 12px;border-radius:999px;cursor:pointer;font-size:13px;transition:.15s ease;white-space:nowrap;}
+    .btn:hover{background:rgba(255,255,255,.12);}
+    .btn:active{transform:scale(0.98);}
+    .status{margin-top:8px;color:var(--muted2);font-size:12px;}
+    .day{margin-top:14px;padding:16px;border:1px solid var(--line);background:rgba(255,255,255,.04);
+      border-radius:var(--radius);box-shadow:var(--shadow);}
+    .day h2{margin:0;font-size:18px;}
+    .day .subtitle{margin-top:6px;color:var(--muted);font-size:13px;}
+    .timeline{margin-top:12px;display:grid;gap:10px;}
+    .item{border:1px solid var(--line);background:var(--card);border-radius:14px;padding:12px 12px;}
+    .row{display:grid;grid-template-columns:98px 34px 1fr;gap:10px;align-items:start;}
+    .time{font-variant-numeric:tabular-nums;color:var(--muted);font-size:13px;}
+    .icon{width:34px;height:34px;display:grid;place-items:center;border-radius:10px;background:rgba(255,255,255,.08);
+      border:1px solid rgba(255,255,255,.10);}
+    .ititle{font-size:15px;margin:0;}
+    .note{margin-top:4px;color:var(--muted);font-size:13px;line-height:1.45;}
+    .detail{margin-top:8px;color:var(--muted2);font-size:13px;line-height:1.55;}
+    .actions{margin-top:10px;display:flex;gap:8px;flex-wrap:wrap;}
+    a.linkbtn{display:inline-flex;align-items:center;gap:6px;border:1px solid rgba(255,255,255,.16);background:rgba(255,255,255,.06);
+      color:var(--text);padding:8px 10px;border-radius:12px;text-decoration:none;font-size:13px;}
+    .footer{margin-top:14px;color:var(--muted2);font-size:12px;text-align:center;}
+    @media (max-width:820px){.grid{grid-template-columns:1fr;}}
+    @media (max-width:640px){.row{grid-template-columns:84px 34px 1fr;}.toprow{flex-direction:column;}}
+  </style>
 </head>
 <body>
-<div class="wrap">
-  <div class="header">
-    <h1>台北慢活文青 4日3夜</h1>
-    <div>2026/01/23–01/26</div>
-    <button class="btn" onclick="location.reload()">⟳ 重新整理行程資料</button>
-    <div class="tabs" id="tabs"></div>
+  <div class="wrap">
+    <section class="header">
+      <div class="toprow">
+        <div>
+          <div class="kicker" id="titleSmall"></div>
+          <div class="title" id="titleMain"></div>
+          <div class="dates" id="dateRange"></div>
+        </div>
+        <div>
+          <button class="btn" id="refreshBtn" title="重新整理行程資料">⟳ 重新整理行程資料</button>
+          <div class="status" id="status"></div>
+        </div>
+      </div>
+
+      <div class="grid">
+        <div class="meta">
+          <h4>住宿</h4>
+          <div class="main" id="hotelMain"></div>
+          <div class="sub" id="hotelSub"></div>
+        </div>
+        <div class="meta">
+          <h4>去程</h4>
+          <div class="main" id="outMain"></div>
+          <div class="sub" id="outSub"></div>
+        </div>
+        <div class="meta">
+          <h4>回程</h4>
+          <div class="main" id="inMain"></div>
+          <div class="sub" id="inSub"></div>
+        </div>
+      </div>
+
+      <div class="tabs" id="tabs"></div>
+    </section>
+
+    <section class="day" id="day"></section>
+    <div class="footer" id="footerNote"></div>
   </div>
-  <div id="day" class="day"></div>
-</div>
+
 <script>
-const TRIP = {"meta": {"titleSmall": "My Trip", "titleMain": "台北慢活文青 4日3夜", "dateRange": "2026/01/23–01/26", "outbound": {"date": "2026-01-23", "flight": "HK Express 110", "route": "Hong Kong → Taipei", "time": "11:25 AM → 1:10 PM (GMT+8)", "duration": "1 hr 45 min"}, "inbound": {"date": "2026-01-26", "flight": "HK Express 117", "route": "Taipei → Hong Kong", "time": "9:15 PM → 11:25 PM (GMT+8)", "duration": "2 hr 10 min"}, "footerNote": "慢活版本：每天保留留白時間。按「重新整理行程資料」可即時重載內容。"}, "days": [{"label": "Day 1", "date": "1月23日（五）", "title": "抵達台北｜落地與放空", "subtitle": "入住後只做兩件事：咖啡＋散步", "items": [{"time": "11:25–13:10", "icon": "✈️", "title": "香港 → 台北（去程）", "note": "HK Express 110｜飛行 1小時45分"}, {"time": "13:10–14:40", "icon": "🛬", "title": "抵達桃園機場＋入境取行李", "note": "預留 60–90 分鐘"}, {"time": "14:40–15:40", "icon": "🚈", "title": "桃園 → 市區", "note": "機場捷運或的士"}, {"time": "16:00–17:30", "icon": "☕️", "title": "咖啡店坐一坐", "note": "不指定店名，放慢節奏"}, {"time": "18:30–20:30", "icon": "🚶", "title": "西門町慢走", "note": "吃晚餐、看夜色"}, {"time": "20:45–21:45", "icon": "🍣", "title": "瞞著爹壽司（創始店）", "note": "萬華區武昌街二段82巷2弄4號2樓"}]}, {"label": "Day 2", "date": "1月24日（六）", "title": "文青日｜華山1914", "subtitle": "看展、選物、坐著", "items": [{"time": "10:30–14:30", "icon": "🖼️", "title": "華山1914文創園區", "note": "展覽／咖啡／選物"}, {"time": "15:00–17:00", "icon": "📚", "title": "書店／閱讀時間", "note": "翻書、放空"}]}, {"label": "Day 3", "date": "1月25日（日）", "title": "童心＋放鬆＋購物", "subtitle": "寶可夢・足湯・Outlet", "items": [{"time": "10:30–12:00", "icon": "🧢", "title": "Pokémon Center Taipei", "note": "新光三越信義 A11"}, {"time": "13:30–14:30", "icon": "♨️", "title": "不老松足湯 台北信義行館", "note": "放鬆泡腳"}, {"time": "15:30–19:00", "icon": "🛍️", "title": "MITSUI OUTLET PARK 林口", "note": "預留往返交通"}]}, {"label": "Day 4", "date": "1月26日（一）", "title": "回程日", "subtitle": "晚上返香港", "items": [{"time": "17:30–18:45", "icon": "🚈", "title": "市區 → 桃園機場", "note": "建議 18:45 前到"}, {"time": "21:15–23:25", "icon": "✈️", "title": "台北 → 香港（回程）", "note": "HK Express 117｜2小時10分"}]}]};
-let current = 0;
-function render() {
-  const d = TRIP.days[current];
-  document.getElementById('day').innerHTML =
-    `<h2>${d.title}</h2><div>${d.subtitle||''}</div>` +
-    d.items.map(i => `<div class="item"><b>${i.time}</b> ${i.icon} ${i.title}<div>${i.note}</div></div>`).join('');
+const TRIP_URL = "trip_taipei.json";
+let TRIP = {"meta": {"titleSmall": "My Trip", "titleMain": "台北慢活文青 4日3夜｜最終版", "dateRange": "2026/01/23–01/26", "hotel": {"name": "路境行旅-府前館", "address": "No.86, Sec. 1, Chongqing S. Rd., Zhongzheng, Taipei, 10045 台灣", "checkin_date": "2026-01-23", "checkout_date": "2026-01-26", "checkin_time": "15:00", "checkout_time": "11:00", "booking_ref": "Expedia 行程編號：73334373984620", "cancel_free_before": "2026-01-20 00:00（住宿當地時間）前可免費取消"}, "outbound": {"date": "2026-01-23", "flight": "HK Express 110", "route": "Hong Kong → Taipei (TPE)", "time": "11:25 AM → 1:10 PM (GMT+8)", "duration": "1 hr 45 min"}, "inbound": {"date": "2026-01-26", "flight": "HK Express 117", "route": "Taipei (TPE) → Hong Kong", "time": "9:15 PM → 11:25 PM (GMT+8)", "duration": "2 hr 10 min"}, "footerNote": "慢活版本（可撤退設計）：每一天都可以提早收工。按「重新整理行程資料」會即時重載 trip_taipei.json（如你更新咗資料）。"}, "days": [{"label": "Day 1", "date": "1月23日（五）", "title": "落地適應｜Outlet × 西門町 × 紅樓夜生活", "subtitle": "順路消化移動成本；第一晚感受台北（識人唔用力）", "items": [{"time": "11:25–13:10", "icon": "✈️", "title": "香港 → 台北（去程）", "note": "HK Express 110｜飛行 1小時45分"}, {"time": "13:10–14:40", "icon": "🛬", "title": "桃園機場入境＋取行李", "note": "SIM／提款如需要；慢慢嚟"}, {"time": "14:50–16:30", "icon": "🛍️", "title": "華泰名品城（GLORIA OUTLETS）", "note": "交通：機場步行 5–10 分鐘｜策略：90 分鐘上限，只行 2–3 間", "maps": "https://www.google.com/maps/search/?api=1&query=%E8%8F%AF%E6%B3%B0%E5%90%8D%E5%93%81%E5%9F%8E%20GLORIA%20OUTLETS"}, {"time": "16:45–18:00", "icon": "🚆", "title": "機捷入城 → 酒店", "note": "首選：桃園機場捷運 → A1 台北車站（約35–40分）→ 步行10–12分或的士5分到酒店", "detail": "酒店：路境行旅-府前館（可先寄存行李；15:00 起可正式入住）。"}, {"time": "18:00–19:00", "icon": "🏨", "title": "入住／沖涼／休息", "note": "停一停，夜晚精神會差好遠"}, {"time": "19:30–20:30", "icon": "🚶", "title": "西門町慢行", "note": "交通：酒店步行 8–10 分鐘｜行到舒服就折返", "maps": "https://www.google.com/maps/search/?api=1&query=%E8%A5%BF%E9%96%80%E7%94%BA"}, {"time": "20:30–21:15", "icon": "🍽️", "title": "晚餐（簡單坐得）", "note": "建議：金峰魯肉飯 或 酒店附近；避免太油膩（為夜晚留力）", "maps": "https://www.google.com/maps/search/?api=1&query=%E9%87%91%E5%B3%B0%E9%AD%AF%E8%82%89%E9%A3%AF"}, {"time": "21:30–22:30", "icon": "🍸", "title": "紅樓夜｜Café Dalida（暖身易傾偈）", "note": "西門紅樓附近｜戶外座位多；開場白：第一次嚟紅樓，有冇推介？", "maps": "https://www.google.com/maps/search/?api=1&query=Caf%C3%A9%20Dalida%20Taipei"}, {"time": "22:30–23:30", "icon": "🍺", "title": "紅樓夜｜Commander D（聊天向）", "note": "想傾偈就去；覺得夠就直接返酒店（零 KPI）", "maps": "https://www.google.com/maps/search/?api=1&query=Commander%20D%20Taipei"}, {"time": "23:30–00:00", "icon": "🛌", "title": "步行返酒店／收工", "note": "全程步行可返；任何時候想走就走"}]}, {"label": "Day 2", "date": "1月24日（六）", "title": "文青吸收日｜華山1914 × 書店 × 瞞著爹壽司", "subtitle": "文化＋坐低＋一餐好食（精神最好的一天）", "items": [{"time": "09:30–10:30", "icon": "🥣", "title": "早餐＋慢慢出門", "note": "目標：唔趕"}, {"time": "10:30–11:00", "icon": "🚇", "title": "酒店 → 華山1914（交通）", "note": "捷運：西門→板南線→善導寺站（2號出口步行約5分）；或的士10–15分"}, {"time": "11:00–14:30", "icon": "🖼️", "title": "華山1914文創園區", "note": "做法：先繞一圈，再揀 1 個展＋1 間咖啡；留時間坐", "maps": "https://www.google.com/maps/search/?api=1&query=%E8%8F%AF%E5%B1%B11914%E6%96%87%E5%89%B5%E5%9C%92%E5%8D%80"}, {"time": "14:30–15:00", "icon": "🧃", "title": "回到市中心／小休", "note": "可以返酒店附近坐 15–30 分鐘（補給站）"}, {"time": "15:00–17:00", "icon": "📚", "title": "書店／閱讀時間", "note": "台北車站／西門一帶；今日成功指標：坐得耐", "maps": "https://www.google.com/maps/search/?api=1&query=%E8%AA%A0%E5%93%81%20%E8%A5%BF%E9%96%80%20%E5%8F%B0%E5%8C%97"}, {"time": "17:45–18:20", "icon": "🚕", "title": "酒店 → 瞞著爹（交通）", "note": "的士 8–10 分鐘；或捷運＋步行（近西門／萬華）"}, {"time": "18:30–20:00", "icon": "🍣", "title": "瞞著爹壽司（創始店）", "note": "台北市萬華區武昌街二段82巷2弄4號2樓（建議早到/預約）", "maps": "https://www.google.com/maps/search/?api=1&query=%E7%9E%9E%E8%91%97%E7%88%B9%E5%A3%BD%E5%8F%B8%20%E5%89%B5%E5%A7%8B%E5%BA%97"}, {"time": "20:30", "icon": "🏨", "title": "返酒店／早收工", "note": "為 Day 3 留力"}]}, {"label": "Day 3", "date": "1月25日（日）", "title": "慢活核心日｜Pokémon × 鼎泰豐 × 3小時按摩 × 大誠品", "subtitle": "食得好 → 身體回復 → 空間感大書店（今日唔用腳拼命）", "items": [{"time": "09:45–10:30", "icon": "🚇", "title": "酒店 → 信義區（交通）", "note": "捷運：台北車站→板南線→市政府站；步行約10分到A11"}, {"time": "10:30–11:30", "icon": "🧢", "title": "Pokémon Center Taipei（A11）", "note": "策略：1 小時上限；拍照＋買 1–2 樣；可問台北限定商品", "maps": "https://www.google.com/maps/search/?api=1&query=Pok%C3%A9mon%20Center%20Taipei"}, {"time": "11:30–12:45", "icon": "🥟", "title": "鼎泰豐（新光三越 A4）午餐", "note": "唔使book（一般book唔到）；11:00–11:30 到更穩；等位≤45分就食，爆就轉A8", "maps": "https://www.google.com/maps/search/?api=1&query=%E9%BC%8E%E6%B3%B0%E8%B1%90%20%E6%96%B0%E5%85%89%E4%B8%89%E8%B6%8AA4"}, {"time": "12:45–13:20", "icon": "🧃", "title": "信義區小休／補水", "note": "為按摩前留白（唔好硬塞行程）"}, {"time": "13:20–13:30", "icon": "🚕", "title": "A4/A11 → 不老松（交通）", "note": "建議的士 5–10 分鐘（最省腳）"}, {"time": "13:30–16:30", "icon": "♨️", "title": "不老松足湯・台北信義行館（3 小時按摩）", "note": "足湯＋按摩；中段休息；唔好滑手機（回復效果最大化）", "maps": "https://www.google.com/maps/search/?api=1&query=%E4%B8%8D%E8%80%81%E6%9D%BE%E8%B6%B3%E6%B9%AF%20%E5%8F%B0%E5%8C%97%E4%BF%A1%E7%BE%A9%E8%A1%8C%E9%A4%A8"}, {"time": "16:30–17:30", "icon": "☕️", "title": "按摩後咖啡／短休", "note": "先坐 20–40 分鐘再去松菸（身體會更舒服）"}, {"time": "17:30–19:30", "icon": "📖", "title": "誠品生活松菸（大誠品）", "note": "按摩後唔建議步行太耐；的士 5–8 分鐘；行到攰就坐", "maps": "https://www.google.com/maps/search/?api=1&query=%E8%AA%A0%E5%93%81%E7%94%9F%E6%B4%BB%E6%9D%BE%E8%8F%B8"}, {"time": "19:30–20:30", "icon": "🚇", "title": "松菸 → 酒店（交通）", "note": "捷運：國父紀念館站→板南線→西門/台北車站；約30分"}, {"time": "20:30", "icon": "🍜", "title": "簡單晚餐／返酒店早瞓", "note": "今日核心已完成；早瞓＝超值"}]}, {"label": "Day 4", "date": "1月26日（一）", "title": "收尾留白｜退房寄存 × 公園 Pokémon GO × 夜機回港", "subtitle": "不製造風險；用公園放空收尾（30–60分鐘就夠）", "items": [{"time": "09:30–10:30", "icon": "☕️", "title": "早餐＋收拾行李", "note": "慢慢執，唔急"}, {"time": "11:00", "icon": "🏨", "title": "退房（寄存行李於酒店）", "note": "之後活動無包袱；記得帶走護照/充電器等"}, {"time": "11:20–12:00", "icon": "🚇", "title": "酒店 → 大安森林公園（交通）", "note": "捷運：西門/台北車站→板南線→忠孝新生→轉文湖線→大安森林公園站；約25–30分"}, {"time": "12:00–13:00", "icon": "🌳", "title": "大安森林公園 × Pokémon GO（正式行程）", "note": "玩法：30–60 分鐘；平路＋多椅；補給站密，唔使追怪；行到舒服就走", "maps": "https://www.google.com/maps/search/?api=1&query=%E5%A4%A7%E5%AE%89%E6%A3%AE%E6%9E%97%E5%85%AC%E5%9C%92"}, {"time": "13:15–15:30", "icon": "🥪", "title": "午餐／咖啡（公園附近或返市中心）", "note": "今日係留白日：坐低先係重點"}, {"time": "15:30–16:30", "icon": "🧳", "title": "返酒店附近／取行李／最後補買手信", "note": "西門／台北車站一帶最方便"}, {"time": "17:30–18:45", "icon": "🚆", "title": "台北車站 A1 → 桃園機場（機捷）", "note": "約35–40分；夜機唔好搏的士；建議 18:45 前到"}, {"time": "21:15–23:25", "icon": "✈️", "title": "台北 → 香港（回程）", "note": "HK Express 117｜飛行 2小時10分"}]}]};
+const EMBEDDED_TRIP = JSON.parse(JSON.stringify(TRIP));
+
+function el(tag, attrs={}, ...children) {
+  const n = document.createElement(tag);
+  for (const [k,v] of Object.entries(attrs)) {
+    if (k === "class") n.className = v;
+    else if (k.startsWith("on") && typeof v === "function") n.addEventListener(k.slice(2), v);
+    else if (v !== null && v !== undefined) n.setAttribute(k, v);
+  }
+  for (const c of children) {
+    if (c === null || c === undefined) continue;
+    n.appendChild(typeof c === "string" ? document.createTextNode(c) : c);
+  }
+  return n;
 }
-document.getElementById('tabs').innerHTML =
-  TRIP.days.map((d,i)=>`<button class="btn" onclick="current=${i};render()">${d.label}</button>`).join('');
-render();
+
+function setStatus(msg) {
+  document.getElementById("status").textContent = msg || "";
+}
+
+function renderHeader() {
+  document.getElementById("titleSmall").textContent = TRIP.meta.titleSmall || "";
+  document.getElementById("titleMain").textContent = TRIP.meta.titleMain || "";
+  document.getElementById("dateRange").textContent = TRIP.meta.dateRange || "";
+
+  const h = TRIP.meta.hotel || {};
+  document.getElementById("hotelMain").textContent = `${h.name || ""}`;
+  document.getElementById("hotelSub").textContent  =
+    `${h.address || ""}\n入住：${h.checkin_date || ""} ${h.checkin_time || ""}｜退房：${h.checkout_date || ""} ${h.checkout_time || ""}\n${h.booking_ref || ""}\n${h.cancel_free_before || ""}`;
+
+  const o = TRIP.meta.outbound || {};
+  const i = TRIP.meta.inbound || {};
+  document.getElementById("outMain").textContent = `${o.flight || ""}｜${o.route || ""}`;
+  document.getElementById("outSub").textContent  = `${o.date || ""}  ${o.time || ""}  ${o.duration ? "｜" + o.duration : ""}`;
+  document.getElementById("inMain").textContent = `${i.flight || ""}｜${i.route || ""}`;
+  document.getElementById("inSub").textContent  = `${i.date || ""}  ${i.time || ""}  ${i.duration ? "｜" + i.duration : ""}`;
+
+  document.getElementById("footerNote").textContent = TRIP.meta.footerNote || "";
+}
+
+function renderTabs(selectedIdx) {
+  const tabs = document.getElementById("tabs");
+  tabs.innerHTML = "";
+  (TRIP.days || []).forEach((d, i) => {
+    const b = el("button", {
+      class: "tab",
+      "aria-selected": i === selectedIdx ? "true" : "false",
+      onclick: () => setDay(i)
+    }, `${d.label}｜${d.date}`);
+    tabs.appendChild(b);
+  });
+}
+
+function renderDay(idx) {
+  const d = (TRIP.days || [])[idx];
+  const root = document.getElementById("day");
+  root.innerHTML = "";
+  if (!d) {
+    root.appendChild(el("h2", {}, "找不到該日行程"));
+    return;
+  }
+  root.appendChild(el("h2", {}, `${d.title}`));
+  root.appendChild(el("div", {class: "subtitle"}, d.subtitle || ""));
+
+  const list = el("div", {class: "timeline"});
+  (d.items || []).forEach(item => {
+    const card = el("div", {class:"item"});
+    card.appendChild(
+      el("div", {class:"row"},
+        el("div", {class:"time"}, item.time || ""),
+        el("div", {class:"icon"}, item.icon || "•"),
+        el("div", {},
+          el("div", {class:"ititle"}, item.title || ""),
+          el("div", {class:"note"}, item.note || "")
+        )
+      )
+    );
+    if (item.detail) card.appendChild(el("div", {class:"detail"}, item.detail));
+    const actions = el("div", {class:"actions"});
+    if (item.maps) actions.appendChild(el("a", {class:"linkbtn", href:item.maps, target:"_blank", rel:"noopener"}, "地圖"));
+    if (actions.childNodes.length) card.appendChild(actions);
+    list.appendChild(card);
+  });
+  root.appendChild(list);
+}
+
+let current = 0;
+function setDay(idx) {
+  current = idx;
+  renderHeader();
+  renderTabs(current);
+  renderDay(current);
+}
+
+async function refreshTripData() {
+  TRIP = JSON.parse(JSON.stringify(EMBEDDED_TRIP));
+  setDay(current);
+  setStatus("正在重新整理…");
+
+  try {
+    const res = await fetch(`${TRIP_URL}?t=${Date.now()}`, { cache: "no-store" });
+    if (!res.ok) throw new Error("HTTP " + res.status);
+    const data = await res.json();
+    if (!data || !data.meta || !Array.isArray(data.days)) throw new Error("JSON 結構不正確");
+    TRIP = data;
+    current = Math.min(current, TRIP.days.length - 1);
+    setDay(current);
+    setStatus("已更新（來自 trip_taipei.json）");
+  } catch (e) {
+    setStatus("已更新（使用內嵌資料；未找到/無法讀取 trip_taipei.json）");
+  }
+}
+
+document.getElementById("refreshBtn").addEventListener("click", refreshTripData);
+setDay(0);
+setStatus("就緒");
 </script>
 </body>
 </html>
